@@ -1,0 +1,49 @@
+'\" t
+.TH GREP.PL 1 "27 Feb 2006" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
+        
+.SH NAME
+grep.pl, filter \- filter files received from \fBrdup -c\fR
+
+.SH SYNOPSIS
+.B grep.sh
+.IR REGEXP
+[
+.IR OPTIONS
+]
+
+.SH DESCRIPTION
+\fBgrep.pl\fR, filter the output it receives from \fBrdup\fR using
+\fIREGEXP\fR.
+.PP
+Note: be carefull with your regular expression that you don't filter
+away any directories that are needed to put the files in. If these
+directories do not exist, the resulting backup will fail.
+.PP
+\fIREGEXP\fR is a Perl regular expression.
+.PP
+For example,
+.PP
+        rdup list ~/Documents | grep.pl '.*' 
+
+Which will let everything pass.
+.PP
+        rdup list ~/Docments | grep.pl -i '50$' 
+
+Will let everything throught that doesn't have "50" as suffix.
+
+.SH OPTIONS
+.TP
+.B \-c
+Accept rdup's -c output. The files' content is \fInot\fR filtered.
+.TP
+.B \-i
+Invert the match. Let everything through that \fIdoes not\fR match.
+.TP
+.B \-h
+Show a short help message.
+.TP
+.B \-V
+Show the version.
+
+.SH SEE ALSO
+gzip.pl(1), mirror.pl(8) and grep(1).
