@@ -19,16 +19,15 @@ my $progName = basename $0;
 
 my %opt;
 
-if (!defined($ARGV[1]) or ! -f $ARGV[1]) {
-        die "Cannot open keyfile";
-}
-my $crOptions = "-q -F -f $ARGV[1] -a blowfish";
-
 getopts('dhV', \%opt);
 usage() if $opt{'h'};
 version() if $opt{'V'};
 $crOptions .= "-d " if $opt{'d'};
 
+if (!defined($ARGV[1]) or ! -f $ARGV[1]) {
+        die "Cannot open keyfile";
+}
+my $crOptions = "-q -F -f $ARGV[1] -a blowfish";
 
 my $tmpDir = tempdir("rdup.crypt.XXXXXX", TMPDIR => 1, CLEANUP => 1);
 die "** $tmpDir could not be created: $!" unless -d $tmpDir;
